apps/biblora/admin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biblora-admin
  namespace: biblora
spec:
  selector:
    app: biblora-admin
  ports:
    - name: http
      port: 80
      targetPort: 80
